<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fregment.Fragment_PlayAndRecord">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/PlayFireMessage"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:elevation="20dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/blue"
        android:hint="@string/PlayFireMessage"
        android:textSize="20dp"
        android:padding="10dp"
        android:textColorHint="@color/blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/PlayIntrusionMessage"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:elevation="20dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/blue"
        android:hint="@string/PlayIntrusionMessage"
        android:textSize="20dp"
        android:padding="10dp"
        android:textColorHint="@color/blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayFireMessage"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RecordFireMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/RecordFireMessage"
        android:padding="10dp"
        android:textColorHint="@color/blue"
        android:textSize="20dp"
        app:cornerRadius="10dp"
        app:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/PlayIntrusionMessage"
        app:layout_constraintStart_toStartOf="@+id/PlayIntrusionMessage"
        app:layout_constraintTop_toBottomOf="@+id/PlayIntrusionMessage"
        app:strokeColor="@color/blue"
        app:strokeWidth="1dp" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/RecordIntrusionMessage"
        android:padding="10dp"
        android:textColorHint="@color/blue"
        android:textSize="20dp"
        app:cornerRadius="10dp"
        app:elevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/RecordFireMessage"
        app:layout_constraintStart_toStartOf="@+id/RecordFireMessage"
        app:layout_constraintTop_toBottomOf="@+id/RecordFireMessage"
        app:strokeColor="@color/blue"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>