<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fregment.Fragment_Dashbord_More_Btn_Option">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_left_arrow_1_"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/editbox_background_add_panel"
        android:elevation="10dp"
        android:hint="@string/PreviousCode"
        android:padding="12dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginTop="10dp"
        android:id="@+id/appCompatEditText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/editbox_background_add_panel"
        android:elevation="10dp"
        android:hint="@string/NewCode"
        android:padding="12dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatEditText"
        app:layout_constraintStart_toStartOf="@+id/appCompatEditText"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginTop="10dp"
        android:id="@+id/appCompatEditText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/editbox_background_add_panel"
        android:elevation="10dp"
        android:hint="@string/ReenterNewCode"
        android:padding="12dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatEditText1"
        app:layout_constraintStart_toStartOf="@+id/appCompatEditText1"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText1" />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/Update"
        android:backgroundTint="@color/blue"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatEditText2"
        app:layout_constraintStart_toStartOf="@+id/appCompatEditText2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText2" />


</androidx.constraintlayout.widget.ConstraintLayout>