<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fregment.Fragment_IntrusionNumbers">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/editbox_background_add_panel"
                android:elevation="10dp"
                android:hint="@string/IntrusionNumbers"
                android:padding="12dp"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/imageButton1"
                app:layout_constraintStart_toStartOf="@+id/recyclerview"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/blue"
                android:foregroundGravity="center"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@+id/editText5"
                app:layout_constraintEnd_toEndOf="@+id/recyclerview"
                app:layout_constraintTop_toTopOf="@+id/editText5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        app:elevation="20dp"
        app:strokeColor="@color/blue"
        app:strokeWidth="1dp"
        android:layout_margin="10dp"
        android:hint="@string/DeleteAllNumbers"
        android:textColorHint="@color/blue"
        android:textSize="18dp"
        android:padding="10dp"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="10dp"
            app:elevation="20dp"
            android:hint="@string/Cancel"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:layout_width="0dp"
            android:textSize="18dp"
            android:padding="7dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            app:cornerRadius="10dp"
            app:elevation="20dp"
            android:backgroundTint="@color/blue"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:hint="@string/Save"
            android:textSize="18dp"
            android:padding="7dp"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"/>
</LinearLayout>
</LinearLayout>
</androidx.core.widget.NestedScrollView>

