<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fregment.Fragment_Timer">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_baseline_access_time_filled_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate3"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/editTextDate3" />
    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Select"
        android:inputType="date"
        android:paddingStart="10dp"
        android:textColorHint="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate2"
        app:layout_constraintStart_toStartOf="@+id/editTextDate2"
        app:layout_constraintTop_toTopOf="@+id/textViewsecound2" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/secound"
        android:textColorHint="@color/blue"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textViewsecound2" />
    <TextView
        android:id="@+id/textViewsecound2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/SounderTime"
        android:textColorHint="@color/blue"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewsecound"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/secound"
        android:textColorHint="@color/blue"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textViewsecound"
        app:layout_constraintTop_toBottomOf="@+id/textViewsecound" />
    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate2"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/editTextDate2"
        />
    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Select"
        android:inputType="date"
        android:paddingStart="10dp"
        android:textColorHint="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/textViewsecound" />
    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/editTextDate"
        />
    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Select"
        android:inputType="date"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/EntryTime"
        android:singleLine="true"
        android:textColorHint="@color/blue"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/secound"
        android:textColorHint="@color/blue"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
    <TextView
        android:id="@+id/textViewsecound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/ExitTime"
        android:textColorHint="@color/blue"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>
